--- a/.env.example
+++ b/.env.example
@@ -3,30 +3,35 @@ APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
 APP_URL=http://localhost
+APP_PORT=8080
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=mysql
 DB_PORT=3306
 DB_DATABASE=arianacodb
 DB_USERNAME=user
 DB_PASSWORD=password
+DB_ROOT_PASSWORD=
+DB_EXTERNAL_PORT=3307
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
 FILESYSTEM_DISK=local
-QUEUE_CONNECTION=sync
+QUEUE_CONNECTION=redis
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
 
 MEMCACHED_HOST=127.0.0.1
 
-REDIS_HOST=127.0.0.1
+REDIS_CLIENT=phpredis
+REDIS_HOST=redis
 REDIS_PASSWORD=null
 REDIS_PORT=6379
+REDIS_EXTERNAL_PORT=6380
 
 MAIL_MAILER=smtp
 MAIL_HOST=mailhog
@@ -56,3 +61,5 @@ VITE_PUSHER_HOST="${PUSHER_HOST}"
 VITE_PUSHER_PORT="${PUSHER_PORT}"
 VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
 VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+WWW_USER=1000
