--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,7 @@ APP_NAME=ariana-co
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=http://localhost:8080
 APP_PORT=8080
 
 LOG_CHANNEL=stack
