feat: sms service added

--- a/.env.example
+++ b/.env.example
@@ -63,3 +63,7 @@ VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
 VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
 WWW_USER=1000
+
+SMS_SERVICE=kavenegar
+KAVENEGAR_API_KEY=test
+MELLI_PAYAMAK_API_KEY=test
